--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.1.6",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "expo-vector-icons": "^10.0.1",
+    "navigation": "^5.5.0",
     "react": "16.13.1",
+    "react-device-detect": "^2.0.0",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-navigation": "^7.21.0",
+    "react-native-web": "~0.13.12",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
