--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
   },
   "dependencies": {
     "@react-navigation/drawer": "^6.1.6",
-    "expo": "~42.0.1",
+    "@unimodules/react-native-adapter": "~6.3.4",
+    "expo": "^42.0.0",
     "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.8.2",
     "expo-vector-icons": "^10.0.1",
     "navigation": "^5.5.0",
     "react": "16.13.1",
     "react-device-detect": "^2.0.0",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-navigation": "^7.21.0",
-    "react-native-web": "~0.13.12",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.2.0"
+    "react-native-navigation": "^7.21.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "~7.9.0"
   },
   "private": true
 }
