--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.2",
     "expo-vector-icons": "^10.0.1",
+    "lottie-react-native": "^4.1.3",
     "navigation": "^5.5.0",
     "react": "16.13.1",
     "react-device-detect": "^2.0.0",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-navigation": "^7.21.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
+    "react-native-square-view": "^0.0.3",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
