--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@react-navigation/drawer": "^6.1.6",
+    "@react-navigation/native": "^6.0.4",
+    "@react-navigation/native-stack": "^6.2.2",
     "@unimodules/react-native-adapter": "~6.3.4",
     "expo": "^42.0.0",
     "expo-status-bar": "~1.0.4",
@@ -20,11 +22,13 @@
     "react-device-detect": "^2.0.0",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-navigation": "^7.21.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-square-view": "^0.0.3",
     "react-native-web": "~0.13.12"
   },
