--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "@react-navigation/drawer": "^6.1.6",
-    "@react-navigation/native": "^6.0.4",
-    "@react-navigation/native-stack": "^6.2.2",
+    "@react-navigation/native": "^6.0.5",
+    "@react-navigation/native-stack": "^6.2.3",
+    "@react-navigation/stack": "^6.0.10",
     "@unimodules/react-native-adapter": "~6.3.4",
     "expo": "^42.0.0",
     "expo-status-bar": "~1.0.4",
